# tauri-skeleton

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
docs/: Email.md  Skeleton.md  Svelte.md  SvelteKit.md  Tauri.md  postcss.md  组件.md
src/: app.html  app.postcss
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/migrations/: init.sql
src-tauri/src/: config.rs  main.rs
src-tauri/src/mail/: mod.rs  receiver.rs  sender.rs  service.rs
src-tauri/src/plugins/: calculate_plugin.rs  email_plugin.rs  mod.rs  response.rs  window_plugin.rs
src-tauri/src/sql/: mod.rs
src/const/: Email.ts
src/lib/: Menu.ts
src/lib/components/: index.d.ts
src/lib/components/Alert/: Alert.ts  Confirm.ts  Prompt.ts
src/lib/components/ContextMenu/: ContextMenu.svelte  ContextMenu.ts
src/lib/components/Editor/: Editor.svelte
src/lib/components/List/: List.svelte  List.ts
src/lib/components/Modal/: Model.ts
src/lib/components/PageContainer/: PageContainer.svelte
src/lib/components/PageSidebar/: PageSidebar.svelte
src/lib/components/Seacher/: Seacher.svelte  Searcher.ts
src/lib/components/SiderMenu/: LoginModal.svelte  (+2 more)
src/lib/datasource/: Datasource.ts
src/lib/icon/: IonIcon.svelte  IonIcon.ts
src/lib/stores/: stores.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/(sidebar)/: +layout.svelte  +layout.ts
src/routes/demo/: +layout.svelte  +page.svelte
src/service/: EmailService.ts  UserConfigService.ts
src/types/: index.d.ts
src/util/: StringUtils.ts  Utilities.ts
(+29 files in other folders)
