[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
tauri = { version = "1.4.0", features = [] }
# JSON
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# 随机数
#random = "0.14.0"
rand = "0.8.5"
# 发邮件
lettre = "0.10.4"
# 收邮件 POP3
#pop3 = "1.0.6"
#openssl = "0.10"
#openssl-sys = "0.9.91"
# imap
native-tls = "0.2"
mail-parser = "0.8.2"
rustls-connector = "0.16.1"
# sqlite
rusqlite = { version = "0.29.0", features = ["bundled"] }
# 错误处理
thiserror = "1.0.44"
anyhow = "1.0.72"

[dependencies.imap]
version = "3.0.0-alpha.10"
features = ["rustls-tls"]
default-features = false

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"] # or "postgres", or "mysql"
